kubernetes/password-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password-manager
  template:
    metadata:
      labels:
        app: password-manager
    spec:
      containers:
        - name: password-manager
          image: votre-username/password-manager:1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
