kubernetes/citation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citation-service
spec:
  selector:
    app: citation-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
