kubernetes/password-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-manager-service
spec:
  selector:
    app: password-manager
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
